--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Creating a cli to fetch and display current in-game status of the game warframe inside of the terminal",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,8 @@
   "dependencies": {
     "boxen": "^7.0.2",
     "chalk": "^5.2.0",
-    "inquirer": "^9.1.5"
+    "chalk-animation": "^2.0.3",
+    "inquirer": "^9.1.5",
+    "nanospinner": "^1.1.0"
   }
 }
